Bug in Color picker for custom property #48560

Closed
opened 2016-05-31 23:07:53 +02:00 by Julien Duroure · 6 comments
Member

System Information
ubuntu 14.04 and Windows 7

Blender Version
2.77

Short description of error
Color picker for custom property : vertical bar (brightness choice) can not be changed
(default picker)

Exact steps for others to reproduce the error
Open attached file
Should display a new panel if python is on
Click on color
In circle part of the picker : no problem
In vertical bar of the picker : value cannot be changed

Don't hesitate to contact me if you need more info

bug_color_custom_property.blend

**System Information** ubuntu 14.04 and Windows 7 **Blender Version** 2.77 **Short description of error** Color picker for custom property : vertical bar (brightness choice) can not be changed (default picker) **Exact steps for others to reproduce the error** Open attached file Should display a new panel if python is on Click on color In circle part of the picker : no problem In vertical bar of the picker : value cannot be changed Don't hesitate to contact me if you need more info [bug_color_custom_property.blend](https://archive.blender.org/developer/F315478/bug_color_custom_property.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2016-06-01 08:17:11 +02:00

This was caused by not setting a maximum, so FLT_MAX was used, causing problems interacting with the slider.
Added check for this and clamp at 1.0. (To work with older releases, define a min/max)

This was caused by not setting a maximum, so FLT_MAX was used, causing problems interacting with the slider. Added check for this and clamp at 1.0. (To work with older releases, define a min/max)
Author
Member

Thanks a lot Campbell!

Cheers,

Julien

Thanks a lot Campbell! Cheers, Julien
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48560
No description provided.