Fix/Workaround T48560: Color picker V fail w/ user defined RNA

Set the maximum soft-max to 1.0 when its left at FLT_MAX.
Since this causes problems using the slider.